<resources>
<string name="app_name">"WebCams"</string>
<string name="action_menu_about">"About"</string>
<string name="action_settings">"Settings"</string>
<string name="pref_general">"General"</string>
<string name="action_delete">"Delete"</string>
<string name="action_deleted">"Deleted"</string>
<string name="pref_delete_all_summ">"Delete all WebCams from the current database"</string>
<string name="are_you_sure">"Are you sure?"</string>
<string name="Yes">"Yes"</string>
<string name="No">"No"</string>
<string name="input_dialog_title">"New WebCam"</string>
<string name="webcam_name">"Name"</string>
<string name="webcam_url">"Web address"</string>
<string name="webcam_category">"Categories"</string>
<string name="hint_webcam_name">"My WebCam"</string>
<string name="hint_webcam_url">"http://example.com/webcam.jpg"</string>
<string name="how_to">"How to"</string>
<string name="dialog_positive_text">"Save"</string>
<string name="dialog_positive_toast_message">"Saved!"</string>
<string name="import_failed">"Import Failed!"</string>
<string name="export_done">"Export Successful!"</string>
<string name="export_failed">"Export Failed!"</string>
<string name="pref_full_screen">"Immersive mode"</string>
<string name="pref_full_screen_summ">"Run application in immersive full-screen mode (only KitKat or higher)"</string>
<string name="action_edit">"Edit"</string>
<string name="action_sort">"Sort"</string>
<string name="new_category_hint">"New list"</string>
<string name="refresh">"Refresh"</string>
<string name="action_menu_help">"Help"</string>
<string name="pref_auto_refresh">"Auto Refresh"</string>
<string name="pref_auto_refresh_summary">"Enable or disable WebCam auto refreshing"</string>
<string name="auto_refresh_interval">"Auto Refresh interval"</string>
<string name="auto_refresh_interval_summary">"Enter auto refreshing interval in seconds"</string>
<string name="image_description">"WebCam image"</string>
<string name="category_array_empty">"No categories created yet"</string>
<string name="all_webcams">"All WebCams"</string>
<string name="pref_import_from_server">"Import from Server"</string>
<string name="imported">"Imported"</string>
<string name="nothing_to_export">"Nothing to export"</string>
<string name="nothing_to_export_summary">"You must first create some WebCams in your database."</string>
<string name="importing_from_server">"Importing from server"</string>
<string name="please_wait">"Please wait..."</string>
<string name="server_unavailable">"Server is unavailable"</string>
<string name="server_unavailable_summary">"You are not connected to the Internet or the server is temporarily unavailable..."</string>
<string name="choose">"CHOOSE"</string>
<string name="popular_webcams">"Popular WebCams"</string>
<string name="selecting_by_country">"Selecting by Country"</string>
<string name="latest_webcams">"Latest WebCams"</string>
<string name="popular">"Popular"</string>
<string name="latest">"Latest"</string>
<string name="no_new_webcams">"No new WebCams"</string>
<string name="no_new_webcams_summary">"There are no new WebCams since the last download."</string>
<string name="countries">"Countries"</string>
<string name="import_done">"Import Successful!"</string>
<string name="import_progress">"Importing in progress and searching for possible duplicates."</string>
<string name="report">"Report"</string>
<string name="import_successfully">"Import was successfully completed!"</string>
<string name="new_webcams">"New WebCams:"</string>
<string name="reassigned">"Reassigned:"</string>
<string name="other">"Other"</string>
<string name="pref_reset_last_check">"Reset last checkpoint"</string>
<string name="pref_reset_last_check_summary">"Reset last checkpoint for Popular and Latest WebCams"</string>
<string name="reset_last_check_message">"Are you sure you want to reset last checkpoint for Popular and Latest WebCams?"</string>
<string name="community_list">"Community list"</string>
<string name="import_webcams_now">"IMPORT WEBCAMS NOW!"</string>
<string name="show_me_help">"SHOW ME HELP"</string>
<string name="import_selected">"IMPORT SELECTED"</string>
<string name="selected">"Selected"</string>
<string name="pref_screen_always_on">"Keep Screen On"</string>
<string name="pref_screen_always_on_summary">"Prevents screen from turning off when the application is in the foreground"</string>
<string name="welcome_content">"Thank you for installing this app! If you have any suggestions for improvement or have found an error, please leave a comment in the Google Play Store or GitHub. Select from the following options:"</string>
<string name="close">"CLOSE"</string>
<string name="done">"Done"</string>
<string name="enter_place_or_country">"Enter a place or a country"</string>
<string name="welcome_to_version">"Welcome to the new version"</string>
<string name="action_sort_date">"Ascending by Date"</string>
<string name="action_sort_date_desc">"Descending by Date"</string>
<string name="action_sort_name">"Ascending by Name"</string>
<string name="action_sort_name_desc">"Descending by Name"</string>
<string name="report_problem">"Report a problem"</string>
<string name="view">"View"</string>
<string name="webcam_coordinates">"Coordinates"</string>
<string name="maximize">"Maximize"</string>
<string name="save_to">"Save to..."</string>
<string name="share">"Share"</string>
<string name="back">"Back"</string>
<string name="show_on_map">"Show on map"</string>
<string name="undo">"UNDO"</string>
<string name="nearby">"Nearby"</string>
<string name="select_radius">"Select a radius"</string>
<string name="no_nearby_webcams">"No WebCams nearby"</string>
<string name="no_nearby_webcams_summary">"No nearby WebCams found. Please try a larger radius."</string>
<string name="pref_clear_cache_and_tmp">"Clear cache"</string>
<string name="pref_clear_cache_and_tmp_summary">"Clear all cache and temporary folders of this application"</string>
<string name="nearby_webcams">"Nearby WebCams"</string>
<string name="all">"All"</string>
<string name="no_coordinates">"No coordinates"</string>
<string name="no_coordinates_summary">"This WebCam does not contain information about the location (coordinates can be added directly in the edit dialog)."</string>
<string name="images_on">"Images ON"</string>
<string name="images_off">"Images OFF"</string>
<string name="drawer_open">"Open navigation drawer"</string>
<string name="drawer_close">"Close navigation drawer"</string>
<string name="selecting_by_name">"Selecting by Name"</string>
<string name="action_search">"Search"</string>
<string name="selecting_from_map">"Selecting from Map"</string>
<string name="delete_webcams_summary">"Delete selected WebCams from the current database"</string>
<string name="submit_suggestion">"Submit a Suggestion"</string>
<string name="submit_suggestion_hint">"My favorite place"</string>
<string name="action_sort_location">"From the nearest"</string>
<string name="action_sort_location_desc">"From the farthest"</string>
<string name="from_map">"From map"</string>
<string name="no_location">"Unable to determine location"</string>
<string name="no_location_description">"This application receives only the approximate location from the system, due to the necessary permissions and energy consumption. If you see this dialog, for some reason it was not possible to determine the position. Please check the settings of your device (you can use the button below)."</string>
<string name="location_settings">"LOCATION SETTINGS"</string>
<string name="airports">"Airports"</string>
<string name="animals">"Animals"</string>
<string name="beaches">"Beaches"</string>
<string name="bridges">"Bridges"</string>
<string name="castles">"Castles"</string>
<string name="cities">"Cities"</string>
<string name="constructions">"Constructions"</string>
<string name="harbours">"Harbours"</string>
<string name="churches">"Churches"</string>
<string name="indoors">"Indoors"</string>
<string name="lakes">"Lakes"</string>
<string name="market_square">"Market square"</string>
<string name="mountains">"Mountains"</string>
<string name="parks">"Parks"</string>
<string name="pools">"Pools"</string>
<string name="radio_studios">"Radio studios"</string>
<string name="railways">"Railways"</string>
<string name="rivers">"Rivers"</string>
<string name="ski_resorts">"Ski resorts"</string>
<string name="traffic_cameras">"Traffic cameras"</string>
<string name="universities">"Universities"</string>
<string name="selecting_by_type">"Selecting by Type"</string>
<string name="types">"Types"</string>
<string name="others">"Others"</string>
<string name="list_is_empty">"The list is empty"</string>
<string name="buildings">"Buildings"</string>
<string name="landscapes">"Landscapes"</string>
<string name="new_category">"New Category"</string>
<string name="edit_category">"Edit Category"</string>
<string name="move">"Move"</string>
<string name="up">"Up"</string>
<string name="down">"Down"</string>
<string name="action_sort_manually">"Manually"</string>
<string name="delete_webcams">"Delete selected"</string>
<string name="pref_web_cams">"WebCams"</string>
<string name="pref_backup_restore">"Backup and Restore"</string>
<string name="pref_restore">"Restore database"</string>
<string name="pref_restore_summary">"Restore the WebCam database from the selected storage"</string>
<string name="pref_backup">"Backup database"</string>
<string name="pref_backup_summary">"Back up the WebCam database to the selected storage"</string>
<string name="pref_delete_all_webcams">"Delete all WebCams"</string>
<string name="local_device">"Local device"</string>
<string name="document_storage">"Document Storage"</string>
<string name="latitude">"Latitude:"</string>
<string name="longitude">"Longitude:"</string>
<string name="action_new">"Add"</string>
<string name="backup_name">"Backup name"</string>
<string name="rename">"Rename"</string>
<string name="backups">"Backups"</string>
<string name="browse">"Browse..."</string>
<string name="restore_progress">"Importing from the selected file"</string>
<string name="no_backups">"No backups in this location"</string>
<string name="nothing_to_show">"Nothing to show"</string>
<string name="widget_refresh_info">"Loading, please wait..."</string>
<string name="updated">"Updated:"</string>
<string name="color_chooser">"Color chooser"</string>
<string name="text_color">"Text color"</string>
<string name="background_color">"Background color"</string>
<string name="live_streams">"Live Streams"</string>
<string name="webcam_thumb_url">"Thumbnail web address"</string>
<string name="hint_webcam_thumb_url">"http://example.com/webcam/thumb.jpg"</string>
<string name="auto_refresh_maximized">"Only if is maximized"</string>
<string name="auto_refresh_maximized_summary">"Enable auto refresh only in maximized view"</string>
<string name="pref_translators">"Translators"</string>
<string name="pref_translators_summary">"People who are involved in the translations"</string>
<string name="pref_libraries">"Libraries"</string>
<string name="pref_libraries_summary">"Libraries used in this project"</string>
<string name="action_menu_about_summary">"Information about the application"</string>
<string name="hint_webcam_stream">"rtmp://example.com/live/cam"</string>
<string name="hint_webcam_analyze">"http://example.com/page-cam.html"</string>
<string name="dont_analyze">"Don't analyze, I have the direct URL!"</string>
<string name="enter_page_for_analyzing">"Enter Web address for analyzing"</string>
<string name="pref_hw_acceleration">"HW Acceleration"</string>
<string name="pref_hw_acceleration_summary">"Enable or disable HW acceleration for decoding live streams (disable only when problems occur)"</string>
<string name="pref_last_category">"Latest category"</string>
<string name="pref_last_category_summary">"After application start open the last used category"</string>
<string name="all_local_webcams">"All local WebCams"</string>
</resources>