<!--
~ *******************************************************************************
~ Copyright (c) 2013-2015 Tomas Valenta
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~ http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
~ *****************************************************************************
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/pref_general"
            android:key="pref_category_general">

    <CheckBoxPreference
        android:key="pref_screen_hw_acceleration"
        android:checked="true"
        android:defaultValue="true"
        android:title="@string/pref_hw_acceleration"
        android:icon="@drawable/settings_hw_acc"
        android:summary="@string/pref_hw_acceleration_summary" />

     <CheckBoxPreference
        android:key="pref_full_screen"
        android:enabled="false"
        android:checked="false"
        android:title="@string/pref_full_screen"
        android:icon="@drawable/settings_immersive_mode"
        android:summary="@string/pref_full_screen_summ" />

    <CheckBoxPreference
        android:key="pref_screen_always_on"
        android:checked="false"
        android:title="@string/pref_screen_always_on"
        android:icon="@drawable/settings_power"
        android:summary="@string/pref_screen_always_on_summary" />

    <CheckBoxPreference
        android:key="pref_last_category"
        android:checked="false"
        android:title="@string/pref_last_category"
        android:icon="@drawable/settings_last_category"
        android:summary="@string/pref_last_category_summary" />

    <CheckBoxPreference
        android:key="pref_auto_refresh"
        android:checked="false"
        android:title="@string/pref_auto_refresh"
        android:icon="@drawable/settings_auto_refresh"
        android:summary="@string/pref_auto_refresh_summary" />

        <CheckBoxPreference
            android:dependency="pref_auto_refresh"
            android:key="pref_auto_refresh_fullscreen"
            android:checked="false"
            android:title="@string/auto_refresh_maximized"
            android:icon="@drawable/settings_auto_refresh_fullscreen"
            android:summary="@string/auto_refresh_maximized_summary" />

        <Preference
            android:dependency="pref_auto_refresh"
            android:key="pref_auto_refresh_interval"
            android:title="@string/auto_refresh_interval"
            android:icon="@drawable/settings_auto_refresh_interval"
            android:summary="@string/auto_refresh_interval_summary" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_web_cams">

        <Preference
            android:key="pref_delete_selected"
            android:title="@string/delete_webcams"
            android:icon="@drawable/settings_delete_selected"
            android:summary="@string/delete_webcams_summary" />

        <Preference
            android:key="pref_delete_all"
            android:title="@string/pref_delete_all_webcams"
            android:icon="@drawable/settings_delete_all"
            android:summary="@string/pref_delete_all_summ" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_backup_restore">

        <Preference
            android:key="pref_export_to_ext"
            android:title="@string/pref_backup"
            android:icon="@drawable/settings_backup"
            android:summary="@string/pref_backup_summary" />

        <Preference
            android:key="pref_import_from_ext"
            android:title="@string/pref_restore"
            android:icon="@drawable/settings_restore"
            android:summary="@string/pref_restore_summary" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/other">

        <Preference
            android:key="pref_reset_last_check"
            android:title="@string/pref_reset_last_check"
            android:icon="@drawable/settings_reset_last_check"
            android:summary="@string/pref_reset_last_check_summary" />

        <Preference
            android:key="pref_clean_cache_and_tmp"
            android:title="@string/pref_clear_cache_and_tmp"
            android:icon="@drawable/settings_clear_cache_and_tmp"
            android:summary="@string/pref_clear_cache_and_tmp_summary" />

        <Preference
            android:key="pref_translators"
            android:title="@string/pref_translators"
            android:icon="@drawable/settings_translators"
            android:summary="@string/pref_translators_summary"/>

        <Preference
            android:key="pref_libraries"
            android:title="@string/pref_libraries"
            android:icon="@drawable/settings_libraries"
            android:summary="@string/pref_libraries_summary"/>

        <Preference
            android:key="pref_about"
            android:title="@string/action_menu_about"
            android:icon="@drawable/settings_about"
            android:summary="@string/action_menu_about_summary"/>

    </PreferenceCategory>
</PreferenceScreen>
