<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cz.yetanotherview.webcamviewer.app.MainActivity">

    <item android:icon="@drawable/ic_action_refresh"
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item android:icon="@drawable/ic_action_dashboard"
        android:id="@+id/action_dashboard"
        android:title="@string/view"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" >
    </item>

    <item android:icon="@drawable/ic_action_sort_by_size_white"
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:orderInCategory="4"
        app:showAsAction="ifRoom" >
    </item>

    <!--ToDo - Move to settings-->
    <!--<item android:id="@+id/action_image_on_off"-->
        <!--android:title=""-->
        <!--android:orderInCategory="5"-->
        <!--app:showAsAction="ifRoom" >-->
    <!--</item>-->

    <item android:icon="@drawable/ic_action_settings"
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="6"
        app:showAsAction="ifRoom" />

    <item android:icon="@drawable/ic_action_help"
        android:id="@+id/menu_help"
        android:title="@string/action_menu_help"
        android:orderInCategory="7"
        app:showAsAction="ifRoom"/>

</menu>