<!--
~ *******************************************************************************
~ Copyright (c) 2013-2015 Tomas Valenta
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~ http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
~ *****************************************************************************
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/webcam_url" />

    <EditText
        android:id="@+id/webcam_url_add_stream"
        style="@style/DialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_webcam_stream"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:inputType="textUri"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/webcam_thumb_url"
        android:id="@+id/webcam_thumb_url_title" />

    <EditText
        android:id="@+id/webcam_thumb_url_add_stream"
        style="@style/DialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_webcam_thumb_url"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:inputType="textUri"
        android:singleLine="true"
        android:imeOptions="actionDone" />

</LinearLayout>