<!--
~ *******************************************************************************
~ Copyright (c) 2013-2015 Tomas Valenta
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~ http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
~ *****************************************************************************
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/webcam_url_title_add_still"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_page_for_analyzing" />

    <EditText
        android:id="@+id/webcam_url_add_still"
        style="@style/DialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_webcam_analyze"
        android:layout_marginTop="2dp"
        android:inputType="textUri"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <CheckBox
        android:id="@+id/still_image_direct_checkBox"
        style="@style/DialogContent"
        android:layout_marginTop="@dimen/five_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_analyze"
        android:layout_gravity="center_horizontal" />

</LinearLayout>