<!--
~ *******************************************************************************
~ Copyright (c) 2013-2015 Tomas Valenta
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~ http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
~ *****************************************************************************
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/report_content"
        style="@style/DialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_successfully"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/huge_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/report_newWebCams_text"
            style="@style/DialogContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/main_middle_margin"
            android:layout_marginEnd="@dimen/main_middle_margin"
            android:text="@string/new_webcams"/>

        <TextView
            android:id="@+id/report_newWebCams"
            style="@style/DialogContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/report_duplicityWebCams_text"
            style="@style/DialogContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/main_middle_margin"
            android:layout_marginEnd="@dimen/main_middle_margin"
            android:text="@string/reassigned"/>

        <TextView
            android:id="@+id/report_duplicityWebCams"
            style="@style/DialogContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/report_updatedWebCams_text"
            style="@style/DialogContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/main_middle_margin"
            android:layout_marginEnd="@dimen/main_middle_margin"
            android:text="@string/updated"/>

        <TextView
            android:id="@+id/report_updatedWebCams"
            style="@style/DialogContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>